// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implements interface works toJson for Any 1`] = `
{
  "authorization": {
    "typeUrl": "/cosmos.TestAny",
    "value": Uint8Array [
      100,
      101,
    ],
  },
  "expiration": "2020-01-01T00:00:00.000Z",
}
`;

exports[`implements interface works toJson for customized interface 1`] = `
{
  "authorization": {
    "typeUrl": "/cosmos.authz.v1beta1.CustomizedAuthorization",
    "value": Uint8Array [
      10,
      11,
      99,
      117,
      115,
      116,
      111,
      109,
      32,
      112,
      97,
      115,
      115,
    ],
  },
  "expiration": "2020-01-01T00:00:00.000Z",
}
`;

exports[`implements interface works toJson for customized interface 2`] = `
{
  "authorization": {
    "typeUrl": "/cosmos.authz.v1beta1.CustomizedAuthorization",
    "value": {
      "customizedMsg": "custom pass",
    },
  },
  "expiration": "2020-01-01T00:00:00.000Z",
}
`;

exports[`implements interface works toJson for extended interface 1`] = `
{
  "authorization": {
    "typeUrl": "/cosmos.authz.v1beta1.GenericAuthorization",
    "value": {
      "msg": "pass",
    },
  },
  "expiration": "2020-01-01T00:00:00.000Z",
}
`;
